# AuraCastPro

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AIRPLAY_IMPLEMENTATIONS_COMPARISON.md  AIRPLAY_PAIRING_SOLUTION.md  AIRPLAY_PROTOCOL_ANALYSIS.md  AIRPLAY_TROUBLESHOOTING.md  AuraCastPro.manifest  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_LEVEL_COMPARISON.md  COMPLETE_DEEP_DIVE_ANALYSIS.md  COMPLETE_FIX_SUMMARY.md  CONNECTION_DIAGNOSIS.md  CONNECTION_FIX_APPLIED.md  CONNECTION_FIX_COMPLETE.md  CONNECTION_FIX_M0_PAIRING.md  CONNECTION_FIX_SUMMARY.md  CONNECTION_STATUS.md  CRITICAL_FIX_INFO_ENDPOINT.md  CRITICAL_PORT_ISSUE_FOUND.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DETAILED_COMPARISON_TABLES.md  DIAGNOSTIC_LOGGING_ADDED.md  ENCODER_ARCHITECTURE.md  ENCODER_STATUS_COMPLETE.md  FINAL_ANALYSIS_AND_RECOMMENDATION.md  FINAL_ENCODER_SETUP.md  FINAL_FIX_PLAN.md  FIXES_APPLIED.md  FIX_CONNECTION_NOW.md  FIX_VIDEO_PACKETS_README.md  IMPLEMENTATION_COMPLETE.md  IPAD_NOT_CONNECTING.md  MIRRORING_VS_RECORDING_SETTINGS.md  MULTI_WINDOW_PROGRESS.md  MULTI_WINDOW_STATUS.md  PASSWORD_FIX_APPLIED.md  (+68 more)
cloud/: CMakeLists.txt  LicenseClient.cpp  LicenseClient.h  ProxySettings.cpp  ProxySettings.h  TelemetryClient.cpp  TelemetryClient.h  UpdateService.cpp  UpdateService.h  WinHttpHelper.cpp  WinHttpHelper.h
src/: AuraCastPro.rc  CMakeLists.txt  main.cpp  pch.h  version_info.h
src/common/: MirrorDeviceInfo.h
src/discovery/: BonjourAdapter.cpp  BonjourAdapter.h  BonjourApi.cpp  BonjourApi.h  CMakeLists.txt  DeviceAdvertiser.cpp  DeviceAdvertiser.h  MDNSService.cpp  MDNSService.h
src/display/: CMakeLists.txt  DX12CommandQueue.cpp  DX12CommandQueue.h  DX12DeviceContext.cpp  DX12DeviceContext.h  DX12Fence.cpp  DX12Fence.h  DX12Manager.cpp  DX12Manager.h  DeviceLostRecovery.cpp  DeviceLostRecovery.h  DeviceMirrorWindow.cpp  DeviceMirrorWindow.h  DisplayHelpers.cpp  DisplayHelpers.h  GPUFrameBufferPool.cpp  GPUFrameBufferPool.h  GPUProfileMarkers.h  HDRDetection.cpp  HDRDetection.h  MirrorWindow.cpp  MirrorWindow.h  MirrorWindowWin32.cpp  MirrorWindowWin32.h  PipelineStateObjects.cpp  PipelineStateObjects.h  RootSignatures.cpp  RootSignatures.h
src/engine/: ADBBridge.cpp  ADBBridge.h  ADBServerLifecycle.cpp  ADBServerLifecycle.h  AV1Demuxer.cpp  AV1Demuxer.h  AirPlay2Host.cpp  AirPlay2Host.h  BitratePID.cpp  BitratePID.h  CMakeLists.txt  CastV2Host.cpp  CastV2Host.h  FECRecovery.cpp  FECRecovery.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  FrameTimingQueue.cpp  FrameTimingQueue.h  H264Demuxer.cpp  H264Demuxer.h  H265Demuxer.cpp  H265Demuxer.h  MirroringListener.cpp  MirroringListener.h  NALParser.cpp  NALParser.h  NetworkAdaptation.cpp  NetworkAdaptation.h  NetworkPredictor.cpp  NetworkPredictor.h  PacketReorderCache.cpp  PacketReorderCache.h  PacketValidator.cpp  PacketValidator.h  PortConflict.cpp  PortConflict.h  ProtocolHandshake.cpp  ProtocolHandshake.h  ReceiverSocket.cpp  (+18 more)
src/input/: AndroidControlBridge.cpp  AndroidControlBridge.h  CMakeLists.txt  ClipboardBridge.cpp  ClipboardBridge.h  InputExtras.cpp  InputExtras.h  KeyboardToInput.cpp  KeyboardToInput.h  MouseToTouch.cpp  MouseToTouch.h
src/integration/: AVSync.cpp  AVSync.h  AudioDeviceEnumerator.cpp  AudioDeviceEnumerator.h  AudioLoopback.cpp  AudioLoopback.h  AudioMixer.cpp  AudioMixer.h  AudioResampler.cpp  AudioResampler.h  CMakeLists.txt  DiskSpaceMonitor.cpp  DiskSpaceMonitor.h  RecordingSystem.cpp  RecordingSystem.h  SharedMemoryIPC.cpp  SharedMemoryIPC.h  StreamRecorder.cpp  StreamRecorder.h  VCamBridge.cpp  VCamBridge.h  VirtualAudioDriver.cpp  VirtualAudioDriver.h
src/integration/MP4MuxerFragments/: MP4Muxer.cpp  MP4Muxer.h
src/licensing/: CMakeLists.txt  FeatureGate.cpp  FeatureGate.h  LicenseManager.cpp  LicenseManager.h  LicenseValidator.cpp  LicenseValidator.h
src/manager/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  DeviceMirrorManager.cpp  DeviceMirrorManager.h  ErrorDialog.cpp  ErrorDialog.h  FirstRunAndSplash.cpp  FirstRunAndSplash.h  GlobalHotkey.cpp  GlobalHotkey.h  HubModel.cpp  HubModel.h  HubWindow.cpp  HubWindow.h  NetworkStatsModel.cpp  NetworkStatsModel.h  PerformanceOverlay.cpp  PerformanceOverlay.h  ProxySettings.cpp  ProxySettings.h  SecurityVault.cpp  SecurityVault.h  SettingsModel.cpp  SettingsModel.h  ToastNotification.cpp  ToastNotification.h  VideoFrameProvider.cpp  VideoFrameProvider.h  WindowsEventLog.cpp  WindowsEventLog.h  WindowsServices.cpp  WindowsServices.h  resources.qrc
src/manager/i18n/: AuraCastPro_en.qm  AuraCastPro_en.ts  zh_CN.ts
src/manager/qml/: AboutDialog.qml  AboutPage.qml  AppHeader.qml  BitrateGraph.qml  ConnectionGuide.qml  Dashboard.qml  DeviceCard.qml  Main.qml  (+25 more)
src/plugins/: CMakeLists.txt  PluginInterface.h  PluginLoader.cpp  PluginLoader.h  PluginManager.cpp  PluginManager.h
src/streaming/: AMFWrapper.cpp  AMFWrapper.h  CMakeLists.txt  HardwareEncoder.cpp  HardwareEncoder.h  NVENCWrapper.cpp  NVENCWrapper.h  QSVWrapper.cpp  QSVWrapper.h  RTMPOutput.cpp  RTMPOutput.h  StreamBroadcaster.cpp  StreamBroadcaster.h
src/utils/: AppDataInit.cpp  AppDataInit.h  AppVersion.h  BinaryPlist.cpp  BinaryPlist.h  CMakeLists.txt  CrashHandler.cpp  CrashHandler.h  CrashReporter.cpp  CrashReporter.h  DiagnosticsExporter.cpp  DiagnosticsExporter.h  EncryptHelper.cpp  EncryptHelper.h  HardwareProfiler.cpp  HardwareProfiler.h  Logger.cpp  Logger.h  NetworkTools.cpp  NetworkTools.h  OSVersionHelper.cpp  OSVersionHelper.h  PerformanceTimer.cpp  PerformanceTimer.h  SafeThread.h  ToastNotification.cpp  WindowsEventLog.cpp  WindowsEventLog.h
tests/: CMakeLists.txt  generate_fixtures.bat  generate_synthetic_fixtures.py
tests/fixtures/: generate_fixtures.bat
tests/integration/: StreamEndToEnd.cpp
tests/performance/: AudioLatencyBenchmark.cpp  GPUThroughputBenchmark.cpp  LatencyMonitor.cpp
tests/unit/: AudioMixerTests.cpp  AudioSyncTests.cpp  BitratePIDTests.cpp  DeviceManagerTests.cpp  NALParserTests.cpp  NetworkPredictorTests.cpp  PacketRecoveryTests.cpp  ParserTests.cpp  ProtocolConformanceTests.cpp  RotationHandlingTests.cpp  SecurityTests.cpp
(+71 files in other folders)
